[package]
name = "null-api"
version = "0.1.0"
edition = "2021"
author = "Stephen F<stephen@thenull.dev>"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
env_logger = "0.10.0"
log = "0.4"
reqwest = "0.11.13"
serde = {version = "1.0.147", features= ["derive"] }
serde_json = "1.0.89"
serde_urlencoded = "0.7"
redis = {version ="0.22.1", features = ["tokio-comp", "connection-manager"]}
envconfig = "0.10.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }