[package]
name = "null-api"
version = "0.1.0"
edition = "2021"
author = "Stephen F<stephen@thenull.dev>"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
# Environment
dotenvy = "0.15.6"
env_logger = "0.10.0"
envconfig = "0.10.0"
log = "0.4"
# HTTP Libs
actix-web = "4"
reqwest = "0.11.13"

# Json
serde = {version = "1.0.147", features= ["derive"] }
serde_json = "1.0.89"
serde_urlencoded = "0.7"

# Database
redis = {version ="0.22.1", features = ["tokio-comp", "connection-manager"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }