[package]
name = "null-api"
version = "0.1.0"
edition = "2021"
authors = ["Stephen F <stephen@thenull.dev>"]

[dependencies]
# Runtime
tokio = { version = "1.40", features = ["full"] }
# Environment
dotenvy = "0.15.7"
env_logger = "0.11.0"
envconfig = "0.10.0"
log = "0.4.21"
# HTTP Libs
actix-web = "4.5.0"
reqwest = { version = "0.12", features = ["json"] }
gql_client = "1.0.7"
# Json
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"

# Database
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }